--- a/ruby-basics-ru/metaprogramming/Gemfile
+++ b/ruby-basics-ru/metaprogramming/Gemfile
@@ -4,3 +4,7 @@ source 'https://rubygems.org'
 
 gem 'minitest-power_assert'
 gem 'virtus'
+
+group :development, :test do
+  gem 'rspec-rails', '~> 6.0.3'
+end
